deploy/k8s/base/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: ui
          image: quay.io/instructlab-ui/ui:PATCHED_FROM_OVERLAYS
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 100m
              memory: 200Mi
          ports:
            - name: http
              protocol: TCP
              containerPort: 3000
          readinessProbe:
            exec:
              command:
              - sh
              - -c
              - "/opt/app-root/src/probe.sh"
            initialDelaySeconds: 5
            periodSeconds: 10
        - name: model-endpoint-healthcheck-sidecar
          image: quay.io/grpereir/ilab-ui-healthcheck-sidecar:latest
          ports:
            - containerPort: 8080
      restartPolicy: Always
