deploy/k8s/base/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: ui
    app.kubernetes.io/name: ui
  ports:
    - port: 8080
      targetPort: 3000
