deploy/k8s/base/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
spec:
  tls:
    - hosts:
        - localhost
      secretName: letsencrypt-ui
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ui
                port:
                  number: 8080
